# hickory-proto-neon

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/: .env
.github/actions/setup/: action.yml
.github/workflows/: build.yml  release.yml  test.yml
crates/hickory-proto-neon/: Cargo.toml
crates/hickory-proto-neon/src/: lib.rs  serde_glue.rs
crates/hickory-proto-neon/src/rdata/: a.rs  aaaa.rs  aname.rs  cname.rs  https.rs  mod.rs  ns.rs  ptr.rs  svcb.rs
src/: index.cts  index.d.ts  index.mts  load.cts  records.ts  types.ts
