[package]
name = "hickory-proto-neon"
version = "0.1.0"
authors = ["Angelos Bouklis <a.bouklis@msensis.com>"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]
rust-version = "1.78"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11.15"
tinyvec = { version = "*", features = ["serde"] }

neon = "1"
neon-serde4 = "1"
neon-macros = "1"
syn = "2.0.87"

[dependencies.hickory-proto]
git = "https://github.com/msensis-com/hickory-dns"
rev = "31f1a7ff008dc139e347376f06445d97f80ad95e"
default-features = false
features = ["text-parsing", "serde"]
