[package]
name = "hickory-proto-neon"
version = "0.1.0"
authors = ["Angelos Bouklis <a.bouklis@msensis.com>"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]
rust-version = "1.78"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_bytes = "0.11.15"
tinyvec = { version = "*", features = ["serde"] }

neon = "1"
neon-serde4 = "1"
neon-macros = "1"
syn = "2.0.87"

[dependencies.hickory-proto]
git = "https://github.com/msensis-com/hickory-dns"
rev = "0f40a29bafb53198bd5366b8c0a95b6734c55a04"
default-features = false
features = ["text-parsing", "serde"]
